# google-coding-contests

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
2021/practice_round/: lib_class.py  practice_round_cli.py  solution.py
hash-codes/2021/practice_round/solutions/: a_solution_2021-01-09 17:42:33.989349  b_solution_2021-01-09 17:13:58.816867  c_solution_2021-01-09 17:41:22.504149  d_solution_2021-01-09 18:14:28.548895  e_solution_2021-01-09 19:09:40.520158
kick-start/2020/round_a/: a.py  solution.py
